--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_authenticated_crud" "\0"
+            VALUE "FileDescription", "teslo_shop" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_authenticated_crud" "\0"
+            VALUE "InternalName", "teslo_shop" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_authenticated_crud.exe" "\0"
-            VALUE "ProductName", "flutter_authenticated_crud" "\0"
+            VALUE "OriginalFilename", "teslo_shop.exe" "\0"
+            VALUE "ProductName", "teslo_shop" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
