--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   dio: ^5.4.1
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.10
+  flutter_staggered_grid_view: ^0.6.2
   go_router: ^13.2.0
   google_fonts: ^6.1.0
   formz: ^0.6.1
+  shared_preferences: ^2.0.18
 
 
   # The following adds the Cupertino Icons font to your application.
